--- a/na_palce/qml.qrc
+++ b/na_palce/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>draw_notes.js</file>
+        <file>game.qml</file>
     </qresource>
 </RCC>
