Use a separate qml file for game summary view

--- a/na_palce/qml.qrc
+++ b/na_palce/qml.qrc
@@ -4,5 +4,6 @@
         <file>qtquickcontrols2.conf</file>
         <file>draw_notes.js</file>
         <file>game.qml</file>
+        <file>game_summary.qml</file>
     </qresource>
 </RCC>
