--- a/na_palce/qml.qrc
+++ b/na_palce/qml.qrc
@@ -5,5 +5,6 @@
         <file>draw_notes.js</file>
         <file>game.qml</file>
         <file>game_summary.qml</file>
+        <file>draw_table.js</file>
     </qresource>
 </RCC>
