Add fingering cheat sheet view

--- a/na_palce/qml.qrc
+++ b/na_palce/qml.qrc
@@ -7,5 +7,6 @@
         <file>game_summary.qml</file>
         <file>draw_table.js</file>
         <file>settings.qml</file>
+        <file>fingers.qml</file>
     </qresource>
 </RCC>
